Replace invalid native repository queries